@@ -1,3 +1,7 @@
+2002-09-03  Tim Jenness  <timj@jach.hawaii.edu>
+
+	* lib/Astro/Coords.pm (comment): Add comment method
+
 2002-08-16  Tim Jenness  <t.jenness@jach.hawaii.edu>
 
 	* lib/Astro/Coords/Elements.pm (_apparent): Add perturbation calculation 
